# nepub-reader

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
bibi/: index.html
bibi/extensions/: custom-font.js  episode-nav.js  narou-episode-nav.js
bibi/presets/: default.js
nepub_reader/: app.py
nepub_reader/templates/: index.html
