[project]
name = "nepub-reader"
version = "0.1.0"
description = "小説家になろうの作品を縦書き表示で快適に読めるリーダー"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "nepub @ git+https://github.com/ttk1/nepub.git",
]

[project.scripts]
nepub-reader = "nepub_reader.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
